--- a/block-BHaaam/index.html
+++ b/block-BHaaam/index.html
@@ -1,20 +1,67 @@
-<!-- 
-### Create a website having 3 separate pages.
+<!DOCTYPE html>
+<html lang="eng">
+<head>
+    <meta charset="UTF-8">
+    <title> My Blog </title>
+    <link rel="stylesheet", href="style.css">
 
-#### TODO 💻:
 
-1. Create a multi-page website, having at least three pages connected.
+</head>
+<body class="color" >
 
-2. Each page must have one header and footer.
+    <header id="top">
+        <h1 id="head">  <strong>The  Rural Life </strong>   </h1>
+        <div>
+            <nav>
+                <a href="Contact.html"> Contact</a>
+                <a href="Services.html"> Services</a>
+                <a href="Carriers.html"> Carriers</a>
+            </nav>
 
-3. In between the header and footer, there must be the main content of the page.
+        </div>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h2 class="heading">The Village</h2>
+                <p> 
+                    Village community signifies a group of people in which the people do not take part in a particular interest. 
+                    On the other hand, they share the basic conditions of a common life.
+                </p>
+                <img src="1.jpg", alt="Fisrt-Pic">
+                 
+                <p>
+                    In India there are more than half a million villages. Eighty per cent of the Indian population lives in these villages.
+                    Hence, in every respect the future of India is very much linked with the development of villages.
+                </p>
+            </article>
 
-4. The main content must have at least two articles.
+        </section>
+        <section>
+            <article>
+                <h2 class="heading"> The Life in villages</h2>
+                <p>
+                    Village community signifies a group of people in which the people do not take part in a particular interest. 
+                    On the other hand, they share the basic conditions of a common life.
+                </p>
+                <img src="2.jpg", alt="Life In villages">
+                <p>
+                    When the word “village” first comes to mind, we imagine a lush green field and unpolluted environment, and this is the exact scenario in Indian villages.
+                     They learn to share and care from a very young age, which comes from the concept of joint families. The majority of India’s population depends on agriculture, as India is an agricultural country.
+                    Agriculture is both practiced as a commercial activity and for self-sustenance. The life in the community is a lot different than the urban lifestyle.
+                     The financial conditions of the farmers are not that good, and they do not have access to advanced tools, which makes farming a tough job for them.
+                </p>
+            </article>
+        </section>
+    </main>
+    <footer>
 
-5. Each article must have one image.
+        <div>
+            <a href="#top"><button class="btn"> Home </button> </a>
+            <p id="copyright"> &copy;asr 2021 All Rights Reserved</p>
+        </div>
+    </footer>
 
-6. Use different background colors for different pages.
+</body>
 
-7. Using CSS resets is necessary.
-
-- use appropriate semantic tags and keep the nesting and indentation clean. -->
+</html>
