--- a/block-BHaaam/index.html
+++ b/block-BHaaam/index.html
@@ -7,7 +7,7 @@
 
 
 </head>
-<body class="color" >
+<body id="color" >
 
     <header id="top">
         <h1 id="head">  <strong>The  Rural Life </strong>   </h1>
@@ -54,11 +54,11 @@
             </article>
         </section>
     </main>
-    <footer>
+    <footer >
 
-        <div>
+        <div id="copyright">
             <a href="#top"><button class="btn"> Home </button> </a>
-            <p id="copyright"> &copy;asr 2021 All Rights Reserved</p>
+            <p > &copy;asr 2021 All Rights Reserved</p>
         </div>
     </footer>
 
